fix: export as SVG and collapse nodes now both work

--- a/css/charts.css
+++ b/css/charts.css
@@ -1,3 +1,4 @@
+/* Simple and Radial Tree */
 .link {
     stroke: #6e6e6e;
     fill: none;
@@ -40,19 +41,4 @@
     border: 0px;
     border-radius: 8px;
     pointer-events: none;
-}
-
-.pop-up {
-	position: absolute;
-	display: none;
-	background-color: #f2f2f2;
-	border-radius: 4px;
-
-	font-family: Arial, sans-serif;
-    font-size: 14px;
-    width: 200px;
-    height: 200px;
-	border: 1px solid #d4d4d4;
-
-	z-index:1200;
 }
